--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		</div>
 
 		<!--container 5-->
-		<div id="" class="">
+		<div id="roundImagesCont" class="">
 		</div>
 
 		<!--container 6-->
