--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en-us">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,20 +19,20 @@
 				<label id="myAccLabel" class="headerLabels"><a href="#"><span>my account</span></a></label>
 				<label id="langLabel" class="headerLabels">
 					<figure>
-						<img id="headerEngFig" src="#" alt="icon"/>
-						<img id="headerPtbrFig" src="#" alt="icon"/>
+						<img id="headerEngFig" src="#" alt="usa flag">
+						<img id="headerPtbrFig" src="#" alt="brazil flag">
 					</figure>
-					<select id="selectLang">
+					<select id="selectLang" aria-label="select language">
 						<option selected>english</option>
-						<option>português brasileiro</option>
+						<option>português - brasileiro</option>
 					</select>
 				</label>
 				<label id="currencyLabel" class="headerLabels">
 					<figure>
-						<img id="dolar" src="#" alt="icon"/>
-						<img id="real" src="#" alt="icon"/>
+						<img id="dolar" src="#" alt="dolar currency icon">
+						<img id="real" src="#" alt="reais currency icon">
 					</figure>
-					<select id="selectCurrency">
+					<select id="selectCurrency" aria-label="select currency">
 						<option selected>US Dollar</option>
 						<option>R$ Real</option>
 					</select>
@@ -42,9 +42,9 @@
 
 		<!--search container-->
 		<div id="searchCont" class="">
-			<figure id="companyLogo"><img src="#" alt="company logo"/></figure>
+			<figure id="companyLogo"><a href="#headerCont"><img src="#" alt="company homepage"></a></figure>
 			<div id="searchBar">
-				<select id="searchSelect">
+				<select id="searchSelect" aria-label="select category to search a product">
 					<option class="searchOpt" selected>all categories</option>
 					<option class="searchOpt">category</option>
 					<option class="searchOpt">category</option>
@@ -52,14 +52,14 @@
 					<option class="searchOpt">category</option>
 					<option class="searchOpt">category</option>
 				</select>
-				<input id="searchBar" type="text" placeholder="search"/>
-				<input id="searchBtn" type="button" value="search"/>
+				<input id="searchBar" type="text" placeholder="search">
+				<input id="searchBtn" type="button" value="search">
 			</div>
 			<div id="searchIcons">
-				<i class="material-icons">swap_horiz</i>
-				<i class="material-icons">favorite_border</i>
+				<label aria-label="sort items"><i class="material-icons" role="button">swap_horiz</i></label>
+				<label aria-label="favorite page"><i class="material-icons" role="button">favorite_border</i></label>
 				<div id="shopCart">
-					<i class="material-icons">local_mall</i>
+					<label aria-label="product cart"><i class="material-icons" role="button">local_mall</i></label>
 					<div id="shopTxt">
 						<p id="myCartTxt">my cart<p>
 						<span id="myCartItems">0 items - $0.00</span>
@@ -71,7 +71,7 @@
 		<!--categories container-->
 		<div id="categoriesCont" class="">
 			<div id="categoriesAll">
-				<select id="categSlct">
+				<select id="categSlct" aria-label="select a product category">
 					<option class="categOpt" selected>all categories</option>
 					<option class="categOpt">categorie 1</option>
 					<option class="categOpt">categorie 2</option>
@@ -83,7 +83,7 @@
 			</div>
 			<div id="categoriesEach">
 				<span class="categItems">home</span>
-				<select class="categItems">
+				<select class="categItems" aria-label="select a feature">
 					<option class="categSlct" selected>features</option>
 					<option class="categSlct">feature 1</option>
 					<option class="categSlct">feature 2</option>
@@ -91,7 +91,7 @@
 					<option class="categSlct">feature 4</option>
 					<option class="categSlct">feature 5</option>
 				</Select>
-				<select class="categItems">
+				<select class="categItems" aria-label="select a collection">
 					<option class="categSlct" selected>collections</option>
 					<option class="categSlct">colection 1</option>
 					<option class="categSlct">colection 2</option>
@@ -99,7 +99,7 @@
 					<option class="categSlct">colection 4</option>
 					<option class="categSlct">colection 5</option>
 				</Select>
-				<select class="categItems">
+				<select class="categItems" aria-label="select an accessorie">
 					<option class="categSlct" selected>accessories</option>
 					<option class="categSlct">accessorie 1</option>
 					<option class="categSlct">accessorie 2</option>
@@ -107,7 +107,7 @@
 					<option class="categSlct">accessorie 4</option>
 					<option class="categSlct">accessorie 5</option>
 				</Select>
-				<select class="categItems">
+				<select class="categItems" aria-label="select a page">
 					<option class="categSlct" selected>pages</option>
 					<option class="categSlct">page 1</option>
 					<option class="categSlct">page 2</option>
@@ -119,8 +119,8 @@
 			</div>
 
 			<div id="categoriesPromo">
-				<span class="promoItems">today deals</span>
-				<span class="promoItems">buy this theme</span>
+				<button class="promoItems">today deals</button>
+				<button class="promoItems">buy this theme</button>
 				<i class="material-icons">messenger</i>
 				<span id="hotItems">hot</span>
 			</div>
@@ -130,19 +130,19 @@
 		<div id="promoCont" class="">
 			<div id="sldShowCont">
 				<div class="slides">
-					<img src="#" alt="promo image"/>
+					<img src="#" alt="image of a product on sale">
 				</div>
 
 				<div class="slides">
-					<img src="#" alt="promo image"/>
+					<img src="#" alt="image of a product on sale">
 				</div>
 
 				<div class="slides">
-					<img src="#" alt="promo image"/>
+					<img src="#" alt="image of a product on sale">
 				</div>
 
 				<div class="slides">
-					<img src="#" alt="promo image"/>
+					<img src="#" alt="image of a product on sale">
 				</div>
 
 				<div id="dots">
@@ -154,18 +154,18 @@
 			</div>
 
 			<div class="miniPromo">
-				<img src="#" alt="mini promo image"/>
-				<img src="#" alt="mini promo image"/>
-				<img src="#" alt="mini promo image"/>
-				<img src="#" alt="mini promo image"/>
-				<img src="#" alt="mini promo image"/>
-				<img src="#" alt="mini promo image"/>
+				<img src="#" alt="image of a product on sale">
+				<img src="#" alt="image of a product on sale">
+				<img src="#" alt="image of a product on sale">
+				<img src="#" alt="image of a product on sale">
+				<img src="#" alt="image of a product on sale">
+				<img src="#" alt="image of a product on sale">
 			</div>
 
 			<div class="socialMedia">
-				<img src="#" alt="mini promo image"/>
-				<img src="#" alt="mini promo image"/>
-				<img src="#" alt="mini promo image"/>
+				<img src="#" alt="share on facebook">
+				<img src="#" alt="share on twitter">
+				<img src="#" alt="e-commerce youtube page">
 			</div>
 		</div>
 
