--- a/index.html
+++ b/index.html
@@ -170,7 +170,47 @@
 		</div>
 
 		<!--container 5-->
-		<div id="" class="">
+		<div id="advantagesCont" class="">
+			<div class="advItems">
+				<img src="#" class="advIcons" alt="">
+				<div class="advTtx" aria-label="delivery">
+					<p>free delivery</p>
+					<p>from $59,89</p>
+				</div>
+			</div>
+
+			<div class="advItems">
+				<img src="#" class="advIcons" alt="">
+				<div class="advTtx" aria-label="support">
+					<p>support 24/7</p>
+					<p>online 24 hours</p>
+				</div>
+			</div>
+
+			<div class="advItems">
+				<img src="#" class="advIcons" alt="">
+				<div class="advTtx" aria-label="return">
+					<p>free return</p>
+					<p>365 a day</p>
+				</div>
+			</div>
+
+			<div class="advItems">
+				<img src="#" class="advIcons" alt="">
+				<div class="advTtx" aria-label="payment">
+					<p>payment method</p>
+					<p>secure payment</p>
+				</div>
+			</div>
+
+			<div class="advItems">
+				<img src="#" class="advIcons" alt="">
+				<div class="advTtx" aria-label="saving">
+					<p>big saving</p>
+					<p>weeken sales</p>
+				</div>
+			</div>
+
 		</div>
 
 		<!--container 6-->
