--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<header id="headerCont" class="">
 			<span id="headerTxt">get an extra 10% off or more on select hotels with Member Pricing. Join now, it's free</span>
 			<div id="headerLogin">
-				<label id="loginLabel" class="headerLabels"><a href="#"><span>login</span></a></label>
-				<label id="myAccLabel" class="headerLabels"><a href="#"><span>my account</span></a></label>
+				<label id="loginLabel" class="headerLabels"><a href="#" target=""><span>login</span></a></label>
+				<label id="myAccLabel" class="headerLabels"><a href="#" target=""><span>my account</span></a></label>
 				<label id="langLabel" class="headerLabels">
 					<figure>
 						<img id="headerEngFig" src="#" alt="usa flag">
@@ -42,7 +42,7 @@
 
 		<!--search container-->
 		<div id="searchCont" class="">
-			<figure id="companyLogo"><a href="#headerCont"><img src="#" alt="company homepage"></a></figure>
+			<figure id="companyLogo"><a href="#headerCont" target=""><img src="#" alt="company homepage"></a></figure>
 			<div id="searchBar">
 				<select id="searchSelect" aria-label="select category to search a product">
 					<option class="searchOpt" selected>all categories</option>
@@ -214,7 +214,49 @@
 		</div>
 
 		<!--container 6-->
-		<div id="" class="">
+		<div id="roundCategCont" class="">
+			<a href="#" target="">
+				<figure class="rCateg">
+					<img src="#" alt="">
+					<figcaption class="rCategCaption">digital</figcaption>
+				</figure>
+			</a>
+
+			<a href="#" target="">
+				<figure class="rCateg">
+					<img src="#" alt="">
+					<figcaption class="rCategCaption">fashion</figcaption>
+				</figure>
+			</a>
+
+			<a href="#" target="">
+				<figure class="rCateg">
+					<img src="#" alt="">
+					<figcaption class="rCategCaption">food & restaurant</figcaption>
+				</figure>
+			</a>
+
+			<a href="#" target="">
+				<figure class="rCateg">
+					<img src="#" alt="">
+					<figcaption class="rCategCaption">health care</figcaption>
+				</figure>
+			</a>
+
+			<a href="#" target="">
+				<figure class="rCateg">
+					<img src="#" alt="">
+					<figcaption class="rCategCaption">spa & massage</figcaption>
+				</figure>
+			</a>
+
+			<a href="#" target="">
+				<figure class="rCateg">
+					<img src="#" alt="">
+					<figcaption class="rCategCaption">travel</figcaption>
+				</figure>
+			</a>
+
 		</div>
 
 		<!--container 7-->
@@ -234,8 +276,8 @@
 		</div>
 
 		<!--container 11-->
-		<div id="" class="">
-		</div>
+		<footer>
+		</footer>
 	</div>
 </body>
 </html>
