--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		</div>
 
 		<!--promo container 4-->
-		<div id="promoCont" class="">
+		<main>
 			<div id="sldShowCont">
 				<div class="slides">
 					<img src="#" alt="image of a product on sale">
@@ -167,7 +167,7 @@
 				<img src="#" alt="share on twitter">
 				<img src="#" alt="e-commerce youtube page">
 			</div>
-		</div>
+		</main>
 
 		<!--container 5-->
 		<div id="advantagesCont" class="">
@@ -260,7 +260,89 @@
 		</div>
 
 		<!--container 7-->
-		<div id="" class="">
+		<div id="sideCont" class="">
+			<div id="qrCodeCont" class="">
+				<img src="#" alt="">
+				<div id="qrCodeTxtCont">
+					<p class="qrCodeTxt">enjoy convenient order tracking</p>
+					<p class="txtTitle">scan to download app</p>
+				</div>
+			</div>
+
+			<div id="specialItems" class="">
+				<label id="spcTitle">
+					<i class="material-icons">whatshot</i>
+					<span>special items</span>
+				</label>
+				<div id="specialOffers" class="spcOffers">
+					<div class="sideOffers">
+						<img src="#" class="sideSpcImg">
+						<div class="sideSpcTxt">
+							<p class="spcTxtTop">lorem ipsum dolor</p>
+							<p class="spcTxtMid">ut enim ad minim veniam</p>
+							<label id="spcTxtValCont">
+								<span class="spcTxtVal">$45.00</span>
+								<span class="spcTxtValDisc">$60.00</span>
+							</label>
+						</div>
+					</div>
+
+					<div class="sideOffers">
+						<img src="#" class="sideSpcImg">
+						<div class="sideSpcTxt">
+							<p class="spcTxtTop">lorem ipsum dolor</p>
+							<p class="spcTxtMid">ut enim ad minim veniam</p>
+							<label id="spcTxtValCont">
+								<span class="spcTxtVal">$50.00</span>
+								<span class="spcTxtValDisc">$80.00</span>
+							</label>
+						</div>
+					</div>
+
+					<div class="sideOffers">
+						<img src="#" class="sideSpcImg">
+						<div class="sideSpcTxt">
+							<p class="spcTxtTop">lorem ipsum dolor</p>
+							<p class="spcTxtMid">ut enim ad minim veniam</p>
+							<label id="spcTxtValCont">
+								<span class="spcTxtVal">$60.00</span>
+								<span class="spcTxtValDisc">$90.00</span>
+							</label>
+						</div>
+					</div>
+
+					<div class="sideOffers">
+						<img src="#" class="sideSpcImg">
+						<div class="sideSpcTxt">
+							<p class="spcTxtTop">lorem ipsum dolor</p>
+							<p class="spcTxtMid">ut enim ad minim veniam</p>
+							<label id="spcTxtValCont">
+								<span class="spcTxtVal">$70.00</span>
+								<span class="spcTxtValDisc">$100.00</span>
+							</label>
+						</div>
+					</div>
+
+					<div class="sideOffers">
+						<img src="#" class="sideSpcImg">
+						<div class="sideSpcTxt">
+							<p class="spcTxtTop">lorem ipsum dolor</p>
+							<p class="spcTxtMid">ut enim ad minim veniam</p>
+							<label id="spcTxtValCont">
+								<span class="spcTxtVal">$80.00</span>
+								<span class="spcTxtValDisc">$150.00</span>
+							</label>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+			<div id="" class="">
+			</div>
+
+			<div id="" class="">
+			</div>
 		</div>
 
 		<!--container 8-->
