--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 			</div>
 
 			<div id="specialItems" class="">
-				<label id="spcTitle">
+				<label class="spcTitle">
 					<i class="material-icons">whatshot</i>
 					<span>special items</span>
 				</label>
@@ -338,10 +338,19 @@
 				</div>
 			</div>
 
-			<div id="" class="">
+			<div id="sideBannerCont" class="">
+				<img src="#" id="sideBanner" alt="the body shop - mother nature's seal of approval">
 			</div>
 
-			<div id="" class="">
+			<div id="recommendItems" class="">
+				<label class="spcTitle">
+					<i class="material-icons">whatshot</i>
+					<span>recommend items</span>
+				</label>
+				<img src="#">
+				<span class="descTxt">-42%</span>
+				<p class="spcTxtTop">lorem ipsum dolor</p>
+				<p class="spcTxtMid">ut enim ad minim veniam</p>
 			</div>
 		</div>
 
