--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
 			<div id="recommendItems" class="">
 				<label class="spcTitle">
-					<i class="material-icons">whatshot</i>
+					<i class="material-icons">stars</i>
 					<span>recommend items</span>
 				</label>
 				<img src="#">
