--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			</div>
 		</div>
 
-		<!--promo container 4-->
+		<!--promo container-->
 		<main>
 			<div id="sldShowCont">
 				<div class="slides">
@@ -146,10 +146,10 @@
 				</div>
 
 				<div id="dots">
-					<i class="material-icons">panorama_fish_eye</i>
-					<i class="material-icons">panorama_fish_eye</i>
-					<i class="material-icons">panorama_fish_eye</i>
-					<i class="material-icons">panorama_fish_eye</i>
+					<i class="material-icons dots">panorama_fish_eye</i>
+					<i class="material-icons dots">panorama_fish_eye</i>
+					<i class="material-icons dots">panorama_fish_eye</i>
+					<i class="material-icons dots">panorama_fish_eye</i>
 				</div>
 			</div>
 
@@ -169,7 +169,7 @@
 			</div>
 		</main>
 
-		<!--container 5-->
+		<!--advantages container-->
 		<div id="advantagesCont" class="">
 			<div class="advItems">
 				<img src="#" class="advIcons" alt="">
@@ -213,7 +213,7 @@
 
 		</div>
 
-		<!--container 6-->
+		<!--round categories container-->
 		<div id="roundCategCont" class="">
 			<a href="#" target="">
 				<figure class="rCateg">
@@ -259,7 +259,7 @@
 
 		</div>
 
-		<!--container 7-->
+		<!--side container-->
 		<div id="sideCont" class="">
 			<div id="qrCodeCont" class="">
 				<img src="#" alt="">
@@ -271,12 +271,12 @@
 
 			<div id="specialItems" class="">
 				<label class="spcTitle">
-					<i class="material-icons">whatshot</i>
+					<i class="material-icons">star</i>
 					<span>special items</span>
 				</label>
 				<div id="specialOffers" class="spcOffers">
 					<div class="sideOffers">
-						<img src="#" class="sideSpcImg">
+						<img src="#" class="sideSpcImg" alt="">
 						<div class="sideSpcTxt">
 							<p class="spcTxtTop">lorem ipsum dolor</p>
 							<p class="spcTxtMid">ut enim ad minim veniam</p>
@@ -288,7 +288,7 @@
 					</div>
 
 					<div class="sideOffers">
-						<img src="#" class="sideSpcImg">
+						<img src="#" class="sideSpcImg" alt="">
 						<div class="sideSpcTxt">
 							<p class="spcTxtTop">lorem ipsum dolor</p>
 							<p class="spcTxtMid">ut enim ad minim veniam</p>
@@ -300,7 +300,7 @@
 					</div>
 
 					<div class="sideOffers">
-						<img src="#" class="sideSpcImg">
+						<img src="#" class="sideSpcImg" alt="">
 						<div class="sideSpcTxt">
 							<p class="spcTxtTop">lorem ipsum dolor</p>
 							<p class="spcTxtMid">ut enim ad minim veniam</p>
@@ -312,7 +312,7 @@
 					</div>
 
 					<div class="sideOffers">
-						<img src="#" class="sideSpcImg">
+						<img src="#" class="sideSpcImg" alt="">
 						<div class="sideSpcTxt">
 							<p class="spcTxtTop">lorem ipsum dolor</p>
 							<p class="spcTxtMid">ut enim ad minim veniam</p>
@@ -324,7 +324,7 @@
 					</div>
 
 					<div class="sideOffers">
-						<img src="#" class="sideSpcImg">
+						<img src="#" class="sideSpcImg" alt="">
 						<div class="sideSpcTxt">
 							<p class="spcTxtTop">lorem ipsum dolor</p>
 							<p class="spcTxtMid">ut enim ad minim veniam</p>
@@ -347,19 +347,109 @@
 					<i class="material-icons">stars</i>
 					<span>recommend items</span>
 				</label>
-				<img src="#">
+				<img src="#" alt="">
 				<span class="descTxt">-42%</span>
 				<p class="spcTxtTop">lorem ipsum dolor</p>
 				<p class="spcTxtMid">ut enim ad minim veniam</p>
 			</div>
 		</div>
 
-		<!--container 8-->
-		<div id="" class="">
+		<!--hot deal container-->
+		<div id="hotDealCont" class="">
+			<div id="hotDealTxtCont" class="">
+				<label id="hotDealLbl">
+					<i class="material-icons">whatshot</i>
+					<h1 id="hotDealTxt">hot deal</h1>
+				</label>
+				<div id="counter">
+					<i class="material-icons">timer</i>
+					<span>|</span>
+					<span id="counterTxt">352d : 23h : 54m : 52s</span>
+				</div>
+			</div>
+
+			<div id="hotDealOfferCont">
+				<div class="hotOffers">
+					<img src="#" class="hotImg" alt="">
+					<div class="hotTxt">
+						<p class="hotTxtTop">lorem ipsum dolor</p>
+						<p class="hotTxtMid">ut enim ad minim veniam</p>
+						<div class="rate">
+							<i class="material-icons starRate">star_rate</i>
+							<i class="material-icons starRate">star_rate</i>
+							<i class="material-icons starRate">star_rate</i>
+							<i class="material-icons starRate">star_rate</i>
+							<i class="material-icons starRate">star_rate</i>
+						</div>
+						<label id="spcTxtValCont">
+							<span class="spcTxtVal">$80.00</span>
+							<span class="spcTxtValDisc">$100.00</span>
+						</label>
+					</div>
+				</div>
+
+				<div class="hotOffers">
+					<img src="#" class="hotImg" alt="">
+					<div class="hotTxt">
+						<p class="hotTxtTop">lorem ipsum dolor</p>
+						<p class="hotTxtMid">ut enim ad minim veniam</p>
+						<div class="rate">
+							<i class="material-icons starRate">star_rate</i>
+							<i class="material-icons starRate">star_rate</i>
+							<i class="material-icons starRate">star_rate</i>
+							<i class="material-icons starRate">star_border</i>
+							<i class="material-icons starRate">star_border</i>
+						</div>
+						<label id="spcTxtValCont">
+							<span class="spcTxtVal">$80.00</span>
+							<span class="spcTxtValDisc">$100.00</span>
+						</label>
+					</div>
+				</div>
+
+				<div class="hotOffers">
+					<img src="#" class="hotImg" alt="">
+					<div class="hotTxt">
+						<p class="hotTxtTop">lorem ipsum dolor</p>
+						<p class="hotTxtMid">ut enim ad minim veniam</p>
+						<div class="rate">
+							<i class="material-icons starRate">star_border</i>
+							<i class="material-icons starRate">star_border</i>
+							<i class="material-icons starRate">star_border</i>
+							<i class="material-icons starRate">star_border</i>
+							<i class="material-icons starRate">star_border</i>
+						</div>
+						<label id="spcTxtValCont">
+							<span class="spcTxtVal">$80.00</span>
+							<span class="spcTxtValDisc">$100.00</span>
+						</label>
+					</div>
+				</div>
+
+				<div class="hotOffers">
+					<img src="#" class="hotImg" alt="">
+					<div class="hotTxt">
+						<p class="hotTxtTop">lorem ipsum dolor</p>
+						<p class="hotTxtMid">ut enim ad minim veniam</p>
+						<div class="rate">
+							<i class="material-icons starRate">star_border</i>
+							<i class="material-icons starRate">star_border</i>
+							<i class="material-icons starRate">star_border</i>
+							<i class="material-icons starRate">star_border</i>
+							<i class="material-icons starRate">star_border</i>
+						</div>
+						<label id="spcTxtValCont">
+							<span class="spcTxtVal">$80.00</span>
+							<span class="spcTxtValDisc">$100.00</span>
+						</label>
+					</div>
+				</div>
+			</div>
 		</div>
 
-		<!--container 9-->
-		<div id="" class="">
+		<!--promotional banner container-->
+		<div id="promoBannerCont" class="">
+			<img src="#" alt="banner with a promotional image. 50% discount guaranted on some items">
 		</div>
 
 		<!--container 10-->
