--- a/index.html
+++ b/index.html
@@ -3,40 +3,37 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="#" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="style.css" type="text/css">
 	<title>Best e-commerce page ever</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-
 </head>
 <body>
-	<div id="wrapper" class="container-fluid col">
+	<div id="wrapper" class="col-12">
 		<!--header container-->
-		<header id="headerCont" class="container-fluid d-flex pt-3 text-white bg-primary">
-			<span id="headerTxt">get an extra 10% off or more on select hotels with Member Pricing. Join now, it's free!</span>
-			<div id="headerLogin" class="d-flex">
-				<label id="loginLabel" class="headerLabels pe-3 w-25"><a href="#" target=""><span class="text-white">login</span></a></label>
-				<label class="d-flex w-50"><a href="#" target=""><i class="material-icons text-white">person</i>
-					<label id="myAccLabel" class="headerLabels pe-3"><span class="text-white">my account</span></a></label>
+		<header id="headerCont" class="row pt-2 px-5 text-white bg-primary">
+			<span id="headerTxt" class="col-md text-center pb-2">Get an extra 10% off or more on select hotels with Member Pricing. Join now, it's free!</span>
+			<div id="headerLogin" class="col-md d-flex justify-content-center align-items-center">
+				<label id="loginLabel" class="col-2 text-center"><a href="#" target=""><span class="text-white">Login</span></a></label>
+				<label class="col-4">
+					<a href="#" target="" class="d-flex justify-content-center">
+						<i class="material-icons text-white">person</i>
+						<span class="text-white">my account</span>
+					</a>
 				</label>
-				<label id="langLabel" class="headerLabels d-flex w-50">
-					<figure class="d-flex w-">
-						<img id="headerEngFig" class="pe-1" src="" alt="usa flag">
-						<img id="headerPtbrFig" class="pe-1" src="" alt="brazil flag" style="display: none">
+				<label id="langLabel" class="col-3 d-inline-flex justify-content-center">
+					<figure class="d-inline-flex">
+						<img id="headerEngFig" src="" alt="usa flag">
+						<img id="headerPtbrFig" src="" alt="brazil flag" style="display: none">
 					</figure>
-					<select id="selectLang" class="border-0 w-50 h-50 text-white bg-primary" aria-label="select language">
-						<option selected class="bg-light text-body">English</option>
-						<option class="bg-light text-body">Português - Brasileiro</option>
+					<select id="selectLang" class="border-0 text-white bg-primary w-50" aria-label="select language">
+						<option selected class="bg-light text-body w-25">English</option>
+						<option class="bg-light text-body w-25">Português - Brasileiro</option>
 					</select>
 				</label>
-				<label id="currencyLabel" class="headerLabels d-flex w-50">
-					<figure>
-						<img id="dolar" class="pe-3" src="#" alt="currency">
-						<img id="real" class="pe-3" src="#" alt="currency" style="display: none">
-					</figure>
-					<select id="selectCurrency" class="border-0 w-50 h-50 text-white bg-primary" aria-label="select currency">
+				<label id="currencyLabel" class="col-3 d-flex justify-content-center">
+					<i class="material-icons">attach_money</i>
+					<select id="selectCurrency" class="border-0 w-50 text-white bg-primary" aria-label="select currency">
 						<option class="bg-light text-body" selected>US Dollar</option>
 						<option class="bg-light text-body">BR Real</option>
 					</select>
@@ -45,10 +42,14 @@
 		</header>
 
 		<!--search container-->
-		<div id="searchCont" class="container-fluid d-flex text-white bg-primary">
-			<figure id="companyLogo" class="w-25 my-auto"><a href="#headerCont" target="" class="w-50 h-50"><img src="#" alt="company homepage" class="w-50 h-50"></a></figure>
-			<div id="searchBar" class="w-50 d-flex">
-				<select id="searchSelect" aria-label="select category to search a product" class="px-3 h-75 border border-end-0">
+		<div id="searchCont" class="row text-white bg-primary pb-2 px-5">
+			<figure id="companyLogo" class="col my-auto">
+				<a href="#headerCont" target="" class="d-flex align-items-center justify-content-center">
+					<img src="#" alt="company homepage" class="">
+				</a>
+			</figure>
+			<div id="searchBar" class="col d-flex align-items-center justify-content-center">
+				<select id="searchSelect" aria-label="select category to search a product" class="p-2 border border-end-0">
 					<option class="searchOpt" selected>All categories</option>
 					<option class="searchOpt">category</option>
 					<option class="searchOpt">category</option>
@@ -56,24 +57,24 @@
 					<option class="searchOpt">category</option>
 					<option class="searchOpt">category</option>
 				</select>
-				<input id="searchBar" type="text" placeholder="Search" class="px-3 w-75 h-75 border border-end-0 border-start-0">
-				<input id="searchBtn" type="button" value="Search" class="px-3 h-75 bg-warning border">
+				<input id="searchBar" type="text" placeholder="Search" class="px-3 border border-end-0 border-start-0">
+				<input id="searchBtn" type="button" value="Search" class="px-3 bg-warning border">
 			</div>
-			<div id="searchIcons" class="w-25 d-flex ms-3">
-				<label aria-label="sort items" class="w-25 p-3"><i class="material-icons" role="button">swap_horiz</i></label>
-				<label aria-label="favorite page" class="w-25 p-3"><i class="material-icons" role="button">favorite_border</i></label>
-				<div id="shopCart" class="d-flex w-50">
-					<label aria-label="product cart"><i class="material-icons bg-warning w-100 h-75 p-3" role="button">local_mall</i></label>
+			<div id="searchIcons" class="col d-flex align-items-center justify-content-center ms-3">
+				<label aria-label="sort items" class="w-25"><i class="material-icons d-flex align-items-center justify-content-center" role="button">swap_horiz</i></label>
+				<label aria-label="favorite page" class=""><i class="material-icons d-flex align-items-center justify-content-center " role="button">favorite_border</i></label>
+				<div id="shopCart" class="d-flex align-items-center justify-content-center">
+					<label aria-label="product cart"><i class="material-icons bg-warning p-3" role="button">local_mall</i></label>
 					<div id="shopTxt" class="ms-3">
-						<p id="myCartTxt">my cart<p>
-						<span id="myCartItems">0 items - $0.00</span>
+						<p id="myCartTxt" class="mb-0">My cart</p>
+						<p id="myCartItems" class="mb-0">0 item(s) - $0.00</p>
 					</div>
 				</div>
 			</div>
 		</div>
 
 		<!--categories container-->
-		<div id="categoriesCont" class="">
+		<div id="categoriesCont" class="d-flex align-items-center">
 			<div id="categoriesAll">
 				<select id="categSlct" aria-label="select a product category">
 					<option class="categOpt" selected>all categories</option>
