--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="wrapper" class="row justify-content-center">
 		<!--header container-->
 		<header id="headerCont" class="row bg-primary px-auto">
-			<span id="headerTxt" class="col-xl text-white text-center p-2">Get an extra 10% off or more on select hotels with Member Pricing. Join now, it's free!</span>
+			<span id="headerTxt" class="col-xl text-white text-center my-auto p-2">Get an extra 10% off or more on select hotels with Member Pricing. Join now, it's free!</span>
 			<div id="headerLogin" class="col-xl d-flex justify-content-center align-items-center p-2">
 				<label id="loginLabel" class="col-1">
 					<a href="#" target="">
